# OpenFOAM-v1812-AD

./: .gitignore  Allwmake  README.md  README_OpenFOAM.md
.github/workflows/: reg_tests.yml
etc/: bashrc  controlDict
etc/config.sh/: settings
modules/avalanche/: Allwclean  Allwmake  README
modules/catalyst/: Allwclean  Allwmake
modules/catalyst/src/catalyst/: Allwclean  Allwmake  CMakeLists-OpenFOAM.txt  CMakeLists-Project.txt  CMakeLists.txt  catalystCoprocess.C  catalystCoprocess.H  catalystFunctionObject.C  catalystFunctionObject.H  catalystInput.C  catalystInput.H  catalystTools.C  catalystTools.H  catalystToolsI.H
modules/catalyst/src/catalyst/areaMesh/: catalystFaMesh.C  catalystFaMesh.H  foamVtkFaMeshAdaptor.C  foamVtkFaMeshAdaptor.H  foamVtkFaMeshAdaptorFieldTemplates.C  foamVtkFaMeshAdaptorFields.C  foamVtkFaMeshAdaptorGeom.C
modules/catalyst/src/catalyst/cloud/: catalystCloud.C  catalystCloud.H  foamVtkCloudAdaptor.C  foamVtkCloudAdaptor.H  foamVtkCloudAdaptorTemplates.C
modules/catalyst/src/catalyst/volMesh/: catalystFvMesh.C  catalystFvMesh.H  foamVtkFvMeshAdaptor.C  foamVtkFvMeshAdaptor.H  foamVtkFvMeshAdaptorFieldTemplates.C  foamVtkFvMeshAdaptorFields.C  foamVtkFvMeshAdaptorGeom.C  foamVtkFvMeshAdaptorGeomVtu.C
src/: Allwmake
src/codipack/: README.txt
src/medipack/: README.txt
tests/calcPartDerivReverse/: calcPartDeriv.C
tests/run/0/: U
tests/simpleFoamAD/: Allclean.sh  Allrun.sh  README.md  simpleFoam.C
tests/testResAD/: testResAD.C
tests/testScalarAD/: testScalarAD.C
wmake/makefiles/: general
wmake/src/: wmkdepend.cpp
(+852 files in other folders)
